--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap 101 Template</title>
+    <title>MBTA Late Night T</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -17,7 +17,9 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <img src="images/compComplaints.png" class="img-responsive" alt="Complaints comparison">
+    <img src="images/compEmergencies.png" class="img-responsive" alt="Emergencies comparison">
+    <img src="images/compCrime.png" class="img-responsive" alt="Crime comparison">
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js/jquery.min.js"></script>
