Added three main sections and GitHub ribbon

--- a/index.html
+++ b/index.html
@@ -17,22 +17,35 @@
       <script src="js/html5shiv.min.js"></script>
       <script src="js/respond.min.js"></script>
     <![endif]-->
+
   </head>
   <body>
 
-    <div class="container">
+    <div class="git-ribbon">
+       <a href="https://github.com/Butterwell/mbta-latenight" rel="me">Find me on GitHub</a>
+    </div>
+
+    <div class="container" style="margin-top: 20px;">
         <h1>MBTA Late Night T <small>Data Challenge</small></h1>
         <p class="lead">Exploring the effects of the Late Night T service on the
             weekends on reported crime, Mayor's hotline complaints and emergency room visits.</p>
 
 
-        <h4>Complaints vs. Number of people out</h4>
+        <h3>Introduction</h3>
+        <p>We set out to explore...</p>
+
+        <h3>The Data</h3>
+        <p>The datasets that we used...</p>
+
+        <h3>Results</h3>
+        <p>After processing the data, we observed...</p>
+
+        <h4 style="margin-top: 20px;">Complaints vs. Number of people out</h4>
         <img src="images/compComplaints.png" class="img-thumbnail" alt="Complaints comparison">
-        <h4>Emergencies vs. Number of people out</h4>
+        <h4 style="margin-top: 20px;">Emergencies vs. Number of people out</h4>
         <img src="images/compEmergencies.png" class="img-thumbnail" alt="Emergencies comparison">
-        <h4>Crime vs. Number of people out</h4>
+        <h4 style="margin-top: 20px;">Crime vs. Number of people out</h4>
         <img src="images/compCrime.png" class="img-thumbnail" alt="Crime comparison">
-    
 
 
     </div>
