--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
        <a href="https://github.com/Butterwell/mbta-latenight" rel="me">Find me on GitHub</a>
     </div>
 
-    <div class="container" style="margin-top: 20px;">
+    <div class="container" style="margin-top: 30px;">
         <h1>MBTA Late Night T <small>Data Challenge</small></h1>
         <p class="lead">Exploring the effects of the Late Night T service on the
-            weekends on reported crime, Mayor's hotline complaints and emergency room visits.</p>
+            weekends on reported crime and Mayor's hotline complaints.</p>
 
 
         <h3>Introduction</h3>
@@ -40,11 +40,9 @@
         <h3>Results</h3>
         <p>After processing the data, we observed...</p>
 
-        <h4 style="margin-top: 20px;">Complaints vs. Number of people out</h4>
+        <h4 style="margin-top: 30px;">Mayor Hotline's complaints vs. number of people out</h4>
         <img src="images/compComplaints.png" class="img-thumbnail" alt="Complaints comparison">
-        <h4 style="margin-top: 20px;">Emergencies vs. Number of people out</h4>
-        <img src="images/compEmergencies.png" class="img-thumbnail" alt="Emergencies comparison">
-        <h4 style="margin-top: 20px;">Crime vs. Number of people out</h4>
+        <h4 style="margin-top: 30px;">Crime vs. Number of people out</h4>
         <img src="images/compCrime.png" class="img-thumbnail" alt="Crime comparison">
 
 
