--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="container" style="margin-top: 30px;">
         <h1>MBTA Late Night T <small>Data Challenge</small></h1>
         <p class="lead">Exploring the effects of the Late Night T service on the
-            weekends on reported crime and Mayor's hotline complaints.</p>
+            weekends on reported crime, emergencie room visits and Mayor's hotline complaints.</p>
 
 
         <h3>Introduction</h3>
@@ -40,10 +40,12 @@
         <h3>Results</h3>
         <p>After processing the data, we observed...</p>
 
+        <h4 style="margin-top: 30px;">Crimes reported vs. number of people out</h4>
+        <img src="images/compCrime.png" class="img-thumbnail" alt="Crime comparison">
+        <h4 style="margin-top: 30px;">Emergencie room visits vs. number of people out</h4>
+        <img src="images/compEmergencies.png" class="img-thumbnail" alt="Emergencies comparison">
         <h4 style="margin-top: 30px;">Mayor Hotline's complaints vs. number of people out</h4>
         <img src="images/compComplaints.png" class="img-thumbnail" alt="Complaints comparison">
-        <h4 style="margin-top: 30px;">Crime vs. Number of people out</h4>
-        <img src="images/compCrime.png" class="img-thumbnail" alt="Crime comparison">
 
 
     </div>
