Finished filling up the gaps in the document

--- a/index.html
+++ b/index.html
@@ -25,28 +25,75 @@
        <a href="https://github.com/Butterwell/mbta-latenight" rel="me">Find me on GitHub</a>
     </div>
 
-    <div class="container" style="margin-top: 30px;">
+    <div class="container" style="margin-top: 40px; margin-bottom: 80px;">
         <h1>MBTA Late Night T <small>Data Challenge</small></h1>
         <p class="lead">Exploring the effects of the Late Night T service on the
             weekends on reported crime, emergencie room visits and Mayor's hotline complaints.</p>
 
 
         <h3>Introduction</h3>
-        <p>We set out to explore...</p>
+        <p>
+            We decided to take an alternative approach, and instead of analyzing the ridership
+            information and its changes after the late night T program was in effect, how good it
+            was for the local businesses or how it affected the cab companies, we tried to
+            measure the impact the increased number of people out and about at late hours was
+            having (if any) into other things such as crime, incidents on the streets, emergency
+            room visits, etc.
+        </p>
 
         <h3>The Data</h3>
-        <p>The datasets that we used...</p>
+        <p>The data that we used to conduct our study was the T ridership (buses, cabs and trains)
+            provided as part of this challenge, along with three other datasets we got our hands on:
+        </p>
+        <ul>
+            <li>Reported crimes (<a href="https://data.cityofboston.gov/Public-Safety/Boston-Crimes/7rq2-geim">from City of Boston's data portal</a>)</li>
+            <li>Emergency room visits (courtesy of the EMS service)</li>
+            <li>Mayor's hotline calls (<a href="https://data.cityofboston.gov/City-Services/Mayor-s-24-Hour-Hotline-Open-Service-Requests/rtbk-4hc4">from City of Boston's data portal</a>)</li>     
+        </ul>
+        <p>
+            We used the ridership data as a proxy for the number of people out and about in a specific night.
+            This number doesn't represent actual people out, but we used its increase with respect to 2013's figures
+            (when there was no late night service) to correlate it to the other datasets and observe their relationships.
+        </p>
+        <p>
+            We joined the data of the external datasets with the ridership data, and filtered just Fridays and Saturdays.
+            Then, we assigned them ordinal numbers representing their position in the year if counting only Fridays and Saturdays (i.e.: 2013's first Friday was #1, the Saturday after that was #2, the following Friday #3... and
+            so on). This allowed us to match "equivalent" Fridays from both years (for example, day #17 is a Friday
+            roughly around the same dates in 2013 and 2014). Finally, we filtered out the day around 2013's Marathon's
+            bombings, because it was a huge outlier (there were very few rides that day in 2013). This left us with 19
+            data points of the <i>19 Fridays and Saturdays for which we had data from 2013 <strong>withouth</strong> late
+            night service and 2014 <strong>with</strong> late night service.</i>
+        </p>
 
         <h3>Results</h3>
-        <p>After processing the data, we observed...</p>
+        <p>After processing the data, we ran a linear regression algorithm with the relationships between the
+            ridership data and the three datasets in our study. The graphs below show the increase or decrease of ridership
+            for a specific day in 2014 compared to its equivalent in 2013, and the corresponding increase or decrease in
+            crimes, emergencies or complaints:
+        </p>
 
-        <h4 style="margin-top: 30px;">Crimes reported vs. number of people out</h4>
+        <h4 style="margin-top: 40px;">Crimes reported vs. number of people out</h4>
+        <p>The intercept for this linear regression is very close to 0 crimes, meaning that, other things aside, there
+            were approximately the same number of crimes in these days in 2013 and 2014. The slope of the regression is
+            possitive, meaning that we see more crimes reported the more the late night ridership is:</p>
         <img src="images/compCrime.png" class="img-thumbnail" alt="Crime comparison">
-        <h4 style="margin-top: 30px;">Emergencie room visits vs. number of people out</h4>
+        
+
+        <h4 style="margin-top: 40px;">Emergencie room visits vs. number of people out</h4>
+        <p>The intercept for this linear regression is possitive, around 70 emergency visits more per day in 2014 compared
+            to 2013, meaning that, other things aside, there was a possitive trend in emergency visits. Regardless, keeping everything else constant, the days with increased ridership show lower emergency room visits:</p>
         <img src="images/compEmergencies.png" class="img-thumbnail" alt="Emergencies comparison">
-        <h4 style="margin-top: 30px;">Mayor Hotline's complaints vs. number of people out</h4>
+        
+
+        <h4 style="margin-top: 40px;">Mayor Hotline's complaints vs. number of people out</h4>
+        <p>The intercept for this linear regression is possitive, around 4 hotline complaints more per day in 2014 compared
+            to 2013, meaning that, other things aside, there was a possitive trend in complaints. Regardless, keeping everything else constant, the days with increased ridership show lower hotline complaints:</p>
         <img src="images/compComplaints.png" class="img-thumbnail" alt="Complaints comparison">
 
+        <h3>Conclussions</h3>
+        <p>We don't think we have a significant amount of data to draw any strong conclussions from this study. But
+            even so, we can see that...
+        </p>
 
     </div>
 
