--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             to 2013, meaning that, other things aside, there was a possitive trend in complaints. Regardless, keeping everything else constant, the days with increased ridership show lower hotline complaints:</p>
         <img src="images/compComplaints.png" class="img-thumbnail" alt="Complaints comparison">
 
-        <h3>Conclussions</h3>
+        <h3>Conclusions</h3>
         <p>We don't think we have a significant amount of data to draw any strong conclussions from this study. But
             even so, we can see that...
         </p>
