--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             so on). This allowed us to match "equivalent" Fridays from both years (for example, day #17 is a Friday
             roughly around the same dates in 2013 and 2014). Finally, we filtered out the day around 2013's Marathon's
             bombings, because it was a huge outlier (there were very few rides that day in 2013). This left us with 19
-            data points of the <i>19 Fridays and Saturdays for which we had data from 2013 <strong>withouth</strong> late
+            data points of the <i>19 Fridays and Saturdays for which we had data from 2013 <strong>without</strong> late
             night service and 2014 <strong>with</strong> late night service.</i>
         </p>
 
