--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
 
     <div class="container" style="margin-top: 40px; margin-bottom: 80px;">
         <h1>MBTA Late Night T <small>Data Challenge</small></h1>
-        <p class="lead">Exploring the effects of the Late Night T service on the
-            weekends on reported crime, emergencie room visits and Mayor's hotline complaints.</p>
+        <p class="lead">Exploring the effects of the Late Night T service on reported crime, emergencie room visits and Mayor's hotline complaints.</p>
 
 
         <h3>Introduction</h3>
@@ -91,7 +90,7 @@
         <img src="images/compComplaints.png" class="img-thumbnail" alt="Complaints comparison">
 
         <h3>Conclusions</h3>
-        <p>We don't think we have a significant amount of data to draw any strong conclussions from this study. But
+        <p>We don't think we have a significant amount of data to draw any strong conclusions from this study. But
             even so, we can see that...
         </p>
 
