Changed background. Linked to github repo.

--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
             data points of the <i>19 Fridays and Saturdays for which we had data from 2013 <strong>without</strong> late
             night service and 2014 <strong>with</strong> late night service.</i>
         </p>
+        <p>
+            For a complete description of the data processing stage, check out our <a href="https://github.com/Butterwell/mbta-latenight/tree/master/import" target="_blank">GitHub repo</a>.
+        </p>
 
         <h3>Results</h3>
         <p>After processing the data, we ran a linear regression algorithm with the relationships between the
