--- a/index.html
+++ b/index.html
@@ -93,8 +93,14 @@
         <img src="images/compComplaints.png" class="img-thumbnail" alt="Complaints comparison">
 
         <h3>Conclusions</h3>
-        <p>We don't think we have a significant amount of data to draw any strong conclusions from this study. But
-            even so, we can see that...
+        <p>Ideally, we would
+        have location data down to minutes, or even hours, for all datasets. Instead, we had to aggregate data to the lowest
+        common denominator: number of events per day. Also, the overlap of late night T service with equivalents periods the
+        year before left us only with 20 data points: the 20 days of late night T service in the dataset.
+        </p>
+        <p>Giving these limitations, we don't think we have a significant amount of data to draw any strong conclusions from
+        this study. However, these graphs hint to a possible relationship between these variables, which might be interesting
+        to explore in more depth, with more detailed datasets.
         </p>
 
     </div>
