--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@
 
         <h3>Conclusions</h3>
         <p>Ideally, we would
-        have location data down to minutes, or even hours, for all datasets. Instead, we had to aggregate data to the lowest
+        have location data down to minutes, or even hours, for all datasets. This was not the case. The bus lines didn't have
+        location data, the cab rides only had zipcode information for residential districts, the emergency visits were just the
+        total number for the day... Instead, we had to aggregate data to the lowest
         common denominator: number of events per day. Also, the overlap of late night T service with equivalents periods the
         year before left us only with 20 data points: the 20 days of late night T service in the dataset.
         </p>
