--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         have location data down to minutes, or even hours, for all datasets. This was not the case. The bus lines didn't have
         location data, the cab rides only had zipcode information for residential districts, the emergency visits were just the
         total number for the day... Instead, we had to aggregate data to the lowest
-        common denominator: number of events per day. Also, the overlap of late night T service with equivalents periods the
+        common denominator: number of events per day. Also, the overlap of late night T service with equivalent periods the
         year before left us only with 20 data points: the 20 days of late night T service in the dataset.
         </p>
         <p>Giving these limitations, we don't think we have a significant amount of data to draw any strong conclusions from
