More language tightening. Especially the introduction.

--- a/index.html
+++ b/index.html
@@ -32,17 +32,12 @@
 
         <h3>Introduction</h3>
         <p>
-            We decided to take an alternative approach, and instead of analyzing the ridership
-            information and its changes after the late night T program was in effect, how good it
-            was for the local businesses or how it affected the cab companies, we tried to
-            measure the impact the increased number of people out and about at late hours was
-            having (if any) into other things such as crime, incidents on the streets, emergency
-            room visits, etc.
+            We wanted to measure the impact of the late night service was having on crime, emergency room visits, noise complaints, and the like to reveal possible benifits or detriments of the service.
         </p>
 
         <h3>The Data</h3>
-        <p>The data that we used to conduct our study was the T ridership (buses, cabs and trains)
-            provided as part of this challenge, along with three other datasets we got our hands on:
+        <p>Our study used data about the T ridership (buses, cabs and trains)
+            provided as part of this challenge, and three other datasets:
         </p>
         <ul>
             <li>Reported crimes (<a href="https://data.cityofboston.gov/Public-Safety/Boston-Crimes/7rq2-geim">from City of Boston's data portal</a>)</li>
@@ -50,8 +45,7 @@
             <li>Mayor's hotline calls (<a href="https://data.cityofboston.gov/City-Services/Mayor-s-24-Hour-Hotline-Open-Service-Requests/rtbk-4hc4">from City of Boston's data portal</a>)</li>     
         </ul>
         <p>
-            We used the ridership data as a proxy for the number of people out and about in a specific night.
-            This number doesn't represent actual people out, but we used its increase with respect to 2013's figures
+            We used the ridership data as a proxy for the number of people out and about in a specific night. While this number doesn't represent actual people out, we used the increase with respect to 2013's figures
             (when there was no late night service) to correlate it to the other datasets and observe their relationships.
         </p>
         <p>
